src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Group for Coolmine</label>
        <referenceTo>Coolmine__c</referenceTo>
        <relationshipLabel>Clients attended</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Incomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groups visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bed_offered_in_Coolmine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bed offered in Coolmine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Detox_group_status__c</fullName>
        <inlineHelpText>Updated when status is changed on the client&apos;s enrollment in the community detox group.
Reminders sent 60 and 90 days after status changed to &quot;Out of Detox&quot;</inlineHelpText>
        <label>Detox group status</label>
        <picklist>
            <picklistValues>
                <fullName>Joined Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Detox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_followup_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community followup required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_admitted_to_stabilisation_group__c</fullName>
        <label>Date admitted to stabilisation group</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_attended_introduction_meeting__c</fullName>
        <formula>Assessment_Group__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date attended introduction meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_offered_assessment__c</fullName>
        <label>Date offered assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_stabilisation__c</fullName>
        <formula>if( ispickval(Stabilisation_Group_status__c , &quot;Admitted&quot;), today() -  Date_admitted_to_stabilisation_group__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in stabilisation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detox_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to Detox client when created from this record.</description>
        <label>Detox Client</label>
        <referenceTo>Detox_Client__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Open_Access_Attendance__c</fullName>
        <label>First Open Access Attendance</label>
        <summarizedField>Open_Access_attendance__c.Date_client_entered__c</summarizedField>
        <summaryForeignKey>Open_Access_attendance__c.Client__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>5+ times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every other day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasionaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregularly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_secondary__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>5+ times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every other day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasionaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregularly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Going_into_pre_entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Going into Coolmine pre-entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Going_into_treatment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Going into treatment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intervention_alerts__c</fullName>
        <formula>CASE(NSP_Intervention_count__c, 
1,&quot;Safe disposal&quot;,
2,&quot;Safer injecting&quot;,
4,&quot;Injection site care&quot;,
5,&quot;Referral, Medical support&quot;,
6,&quot;Alternative routes&quot;,
8,&quot;Treatment options and Keyworker&quot;
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intervention alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_Medical_Card_current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the Medical Card current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_NSP_Intervention__c</fullName>
        <label>Last NSP Intervention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_of_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member of staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSP_Intervention_count__c</fullName>
        <label>NSP Intervention count</label>
        <summaryForeignKey>Needle_Exchange__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSP_Location__c</fullName>
        <label>NSP Location</label>
        <picklist>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSP_Sublocation__c</fullName>
        <label>NSP Sublocation</label>
        <picklist>
            <picklistValues>
                <fullName>Ardee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drogheda (North)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drogheda (South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drogheda (LCDAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (Bridge Street)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (North)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (Simon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundalk (South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan (Fair Green)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan (North)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navan (South)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nobber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oldcastle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duleek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunshaughlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bailieborough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bailieborough (CDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballivor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballyhaise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballyjamesduff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bettystown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan (CDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cootehill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingscourt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSP_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSP client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Access_Attendance_Count__c</fullName>
        <label>Open Access Attendance Count</label>
        <summaryForeignKey>Open_Access_attendance__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Access_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Access client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_source_of_referral__c</fullName>
        <inlineHelpText>If other is selected in the source of referral, please give details here</inlineHelpText>
        <label>Other source of referral</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPS_Number__c</fullName>
        <inlineHelpText>7 digits followed by 2 or 3 letters</inlineHelpText>
        <label>PPS Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Substance__c</fullName>
        <label>Primary Substance</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mephedrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other opiods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other stimulants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other sedatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other body enhancing drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other substances</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prison_followup_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prison followup required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_referral__c</fullName>
        <inlineHelpText>What are the primary reasons for your referral / accessing of this service?</inlineHelpText>
        <label>Reason for referral</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref_Code__c</fullName>
        <label>Ref Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_to_CDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred to CDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_to_Day_Programme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred to Day Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residing__c</fullName>
        <label>Residing in</label>
        <picklist>
            <picklistValues>
                <fullName>Carlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leitrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roscommon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tipperary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wexford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wicklow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No fixed abode</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <picklist>
            <picklistValues>
                <fullName>Intramuscular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intranasal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intravenous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcutaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sublingual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_secondary__c</fullName>
        <label>Route</label>
        <picklist>
            <picklistValues>
                <fullName>Intramuscular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intranasal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intravenous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcutaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sublingual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Substance__c</fullName>
        <label>Secondary Substance</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannabis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mephedrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other opiods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other stimulants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other sedatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other body enhancing drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other substances</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_area__c</fullName>
        <label>Service area</label>
        <picklist>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_workers_over_past_year__c</fullName>
        <inlineHelpText>Services/workers you are in contact with over the last year (we will only contact them after consenting with you).
(e,g: probation officer, addiction treatment centre, counsellor, social worker, housing service, other key working service, child support)</inlineHelpText>
        <label>Services / workers over past year</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Arm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_secondary__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Arm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_referral__c</fullName>
        <label>Source of referral</label>
        <picklist>
            <picklistValues>
                <fullName>Accident &amp; Emergency other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Hospital Service (excluding A&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballymun RR Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge CE Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coolmine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court/Probation/Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harm Reduction programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartstown Huntstown CDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Liaison Nurse at A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health service (including psychiatrist)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other drug treatment centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Service User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Snug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social / Community Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolka River project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinity Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stabilisation_Group_status__c</fullName>
        <inlineHelpText>Updated when the client&apos;s is enrollment is changed in the stabilisation group.</inlineHelpText>
        <label>Stabilisation Group status</label>
        <picklist>
            <picklistValues>
                <fullName>Admitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stabilisation_Meter__c</fullName>
        <formula>image(&quot;http://chart.googleapis.com/chart?chxl=0:|Start||Finish&amp;chxt=y&amp;chs=300x100&amp;cht=gm&amp;chds=0,112&quot; +&quot;&amp;chd=t:&quot; + text(Days_in_stabilisation__c ),&quot;Stabilisation image&quot;,100,300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stabilisation Meter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White_Irish_Traveller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White Irish Traveller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bde__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>bde__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__Age__c</fullName>
        <formula>IF(ISBLANK( Birthdate ), 99, FLOOR((TODAY()-Birthdate)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If not known, Code 99</inlineHelpText>
        <label>AGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ecass01__AreaRes__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__Area_Code__c</formula>
        <label>AreaRes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Area__c</fullName>
        <formula>LEFT(TEXT(ecass01__HSE_area__c), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Area_of_Residence_and_Reg_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area of Residence and Reg Code</label>
        <referenceTo>ecass01__Area_of_Residence_Old__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__CCA__c</fullName>
        <formula>ecass01__Area_of_Residence_and_Reg_Code__r.ecass01__CCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Case_Worker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Worker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Case Worker)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ecass01__CentreNO__c</fullName>
        <formula>&quot;13687&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CentreNo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Client_ID__c</fullName>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecass01__Client_Number__c</fullName>
        <description>207125{yy}{00000}</description>
        <inlineHelpText>Format: YY00000
Last number: click Custom Link (left bar) Last Client Numbers</inlineHelpText>
        <label>Client Number: 207125</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>